# lab07hw

./: CMakeLists.txt
.github/workflows/: build.yml  release.yml
cmake/: config.cmake
include/: primality.hpp
src/: primality.cpp
